@startuml
class Cadena {
    - nombre : String
    - listaProgramas : ArrayList<Programa>
    + Cadena(String nombre)
    + getNombre() : String
    + setNombre(String nombre) : void
    + getListaProgramas() : ArrayList<Programa>
    + agregarPrograma(Programa programa) : void
    + removerPrograma(Programa programa) : void+
8    + toString() : String
}

class Programa {
    - nombre : String
    - cadena : Cadena
    - temporadas : int
    - listaEmpleados : ArrayList<Empleado>
    - listaInvitados : ArrayList<Invitado>
    - director : Empleado
    + Programa(String nombre, Cadena cadena, int temporadas)
    + getNombre() : String
    + setNombre(String nombre) : void
    + getCadena() : Cadena
    + setCadena(Cadena nuevaCadena) : void
    + getTemporadas() : int
    + setTemporadas(int temporadas) : void
    + getListaEmpleados() : ArrayList<Empleado>
    + getListaInvitados() : ArrayList<Invitado>
    + agregarDirector(String nombre) : void
    + removerDirector() : void
    + agregarEmpleado(String nombre, String cargo) : void
    + removerEmpleado(Empleado empleado) : void
    + agregarInvitado(String nombre, String profesion, LocalDate fechaVisita, int duracionVisita) : void
    + removerInvitado(Invitado invitado) : void
    + toString() : String
}

class Empleado {
    - contador : int
    - id : String
    - nombre : String
    - cargo : String
    - director : Empleado
    + Empleado(String nombre, String cargo, Empleado director)
    + getId() : String
    + getNombre() : String
    + setNombre(String nombre) : void
    + getCargo() : String
    + setCargo(String cargo) : void
    + getDirector() : Empleado
    + setDirector(Empleado director) : void
    + toString() : String
}

class Invitado {
    - nombre : String
    - profesion : String
    - fechaVisita : LocalDate
    - duracionVisita : int
    + Invitado(String nombre, String profesion, LocalDate fechaVisita, int duracionVisita)
    + getNombre() : String
    + setNombre(String nombre) : void
    + getProfesion() : String
    + setProfesion(String profesion) : void
    + getFechaVisita() : LocalDate
    + setFechaVisita(LocalDate fechaVisita) : void
    + getDuracionVisita() : int
    + setDuracionVisita(int duracionVisita) : void
    + toString() : String
}

class AppProgramas {
    + main(String[] args) : void
}

Cadena "1" *-- "0..*" Programa
Programa "1" *-- "0..*" Empleado
Programa "1" *-- "0..*" Invitado
Empleado "0..1" *-- "0..1" Empleado : director
AppProgramas ..> Cadena : uses
AppProgramas ..> Programa : uses
AppProgramas ..> Empleado : uses
AppProgramas ..> Invitado : uses
@enduml